--- a/getIpForAndroid/testIP/res/layout/activity_main.xml
+++ b/getIpForAndroid/testIP/res/layout/activity_main.xml
@@ -8,21 +8,150 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bc.testip.MainActivity" >
 
-    <Button
-        android:id="@+id/ipButton"
+  <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="重新获取ip" />
+        android:layout_centerVertical="true" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/ipButton"
-        android:layout_alignLeft="@+id/ipButton"
-        android:layout_marginBottom="31dp"
-        android:text="TextView" />
+       <TableRow
+           android:id="@+id/tableRow1"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+
+           <TextView
+               android:id="@+id/localIPV6"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="本地链路ipv6:" />
+
+       </TableRow>
+
+       <TableRow
+           android:id="@+id/tableRow2"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+
+           <TextView
+               android:id="@+id/textView2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="TextView" />
+
+       </TableRow>
+
+       <TableRow
+           android:id="@+id/tableRow8"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+
+           <TextView
+               android:id="@+id/space1"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="  
+               
+               " />
+
+       </TableRow>
+
+       <TableRow
+           android:id="@+id/tableRow3"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+
+           <TextView
+               android:id="@+id/ipv6"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="ipv6:" />
+
+       </TableRow>
+
+       <TableRow
+           android:id="@+id/tableRow4"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+
+           <TextView
+               android:id="@+id/textView3"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="TextView" />
+
+       </TableRow>
+
+       <TableRow
+           android:id="@+id/tableRow9"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+           <TextView
+               android:id="@+id/space2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="  
+               
+               " />
+       </TableRow>
+
+       <TableRow
+           android:id="@+id/tableRow5"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+
+           <TextView
+               android:id="@+id/ipv4"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="ipv4:" />
+
+       </TableRow>
+
+      
+       <TableRow
+           android:id="@+id/tableRow6"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+
+           <TextView
+               android:id="@+id/textView1"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="TextView" />
+
+         
+
+       </TableRow>
+
+       <TableRow
+           android:id="@+id/tableRow10"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+           <TextView
+               android:id="@+id/space3"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="  
+               
+               " />
+       </TableRow>
+
+      
+
+       <TableRow
+           android:id="@+id/tableRow7"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" >
+
+           <Button
+               android:id="@+id/ipButton"
+               style="?android:attr/buttonStyleSmall"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="重新获取ip" />
+
+       </TableRow>
+
+    </TableLayout>
 
 </RelativeLayout>
